samples/_failures_safe/1761731029_976320_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_9f4aa272.c: In function ‘parser_parse_expression’:
./samples/SAFE/__tmp_9f4aa272.c:169:9: error: expected declaration or statement at end of input
  169 |         int right = parser_parse_term(parser);
      |         ^~~
./samples/SAFE/__tmp_9f4aa272.c:169:9: error: expected declaration or statement at end of input
